src/test/resources/tokens/invalid/field_descriptor_unterminated_object.unpick
unpick v3
target_field foo.Bar baz Ljava/lang/String g